src/objects/Vacancy_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vacancy Contacts</relationshipLabel>
        <relationshipName>Vacancy_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recruitment_Owner__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Recruitment Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <label>Vacancy</label>
        <referenceTo>Vacancy__c</referenceTo>
        <relationshipLabel>Vacancy Contacts</relationshipLabel>
        <relationshipName>Vacancy_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vacancy Contact</label>
    <nameField>
        <displayFormat>V{0000000000}</displayFormat>
        <label>Vacancy Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacancy Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>